[package]
name = "avery"
version = "0.7.0"
edition = "2021"
description = "A scattering event format for converting between other formats"
authors = ["Andreas Maier <andreas.martin.maier@desy.de>"]
license = "GPL-3.0-or-later"
keywords = ["physics"]
categories = ["science"]
repository = "https://github.com/a-maier/avery"

[dependencies]
ahash = "0.8"
hepmc2 = { version = "0.7", optional = true }
itertools = "0.13"
lhef = { version = "0.6", optional = true }
ntuple = { version = "0.9", optional = true }
particle_id = "0.5"
petgraph = "0.6"
stripper-xml = { version = "0.5", optional = true }

[features]
default = ["lhef", "hepmc2"]
